--- a/www/index.html
+++ b/www/index.html
@@ -8,10 +8,28 @@
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
     <script>
+        function cadastrar(){
+        var nomes = []
+        var nomeinserido = []
+        var exibirnome = "";
+
+        nomeinserido = document.getElementById('insertnome').value 
+
+        nomes.push(nomeinserido)
+        alert(nomes[0])
+
+        exibirnome = nomeinserido
+        document.getElementById("exibirnome").textContent = exibirnome
+        }
     </script>
 </head>
 <body>
-	<br />
-    This is a template for Monaca app.
+    <center>
+    <h2> Guardas Nomes </h2>
+	<input type="text" class="nome" placeholder="insira o nome aqui" id="insertnome">
+    <input type="button" value="Cadastrar" onclick="cadastrar()" class="botao">
+    <h1 id="exibirnome"></h1>
+    </center>
+
 </body>
 </html>
